Split Webscrapes into tables by status, minor fixes, testing running process... | Ok - Committing before refactoring from analysis, see <webscraper-process-schema>... | On branch <62610723-webscraper-process-schema-architecture-implementation>, refactoring done - to be reviewed, tested and validated, pushing... | Syntax errors fixed, re-pushing... | Runtime errors fixed, re-pushing... next: Operational errors... | Operational errors fixed, migration done... next: Testing... | Local tests & fixes completed, system running smoothly. Next: truthfinder tests...

--- a/django_app/templates/_base.html
+++ b/django_app/templates/_base.html
@@ -33,8 +33,10 @@
 
 
         {% load unicorn %}
-        <script defer src="https://unpkg.com/@alpinejs/morph@3.x.x/dist/cdn.min.js"></script>
-        <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+        <!-- script defer src="https://unpkg.com/@alpinejs/morph@3.x.x/dist/cdn.min.js"></script -->
+        <!-- script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script -->
+        <script defer src="{% static 'js/unpkg.com/@alpinejs/morph@3.x.x/dist/cdn.min.js' %}"></script>
+        <script defer src="{% static 'js/unpkg.com/alpinejs@3.x.x/dist/cdn.min.js' %}"></script>
         {% unicorn_scripts %}
 
         <script type="text/javascript" src="{% static 'templates/main/js/main.js' %}"></script>
