--- a/webscraping/templates/unicorn/webscrape/row.html
+++ b/webscraping/templates/unicorn/webscrape/row.html
@@ -6,7 +6,7 @@
     {% if webscrape.state %}
         {% define '' as select_state %}
     {% endif %}
-    <tr class="shadow-lg">
+    <tr class="shadow-lg webscrape-row {{webscrape.task_status}}">
         <!--
         <td class="py-6">
             {% if is_editing %}
@@ -243,7 +243,9 @@ n btn-outline-success rounded bg-green-600 hover:bg-green-400 p-1 px-4
         <td id="retry-{{webscrape.id}}"
             class="first:rounded-l-lg last:rounded-r-lg p-2
                    text-green-900 tracking-widest border-green-100">
-            <i class="fa fa-repeat repeat" unicorn:click="retry"></i>
+            {% if task_is_queueable %}
+                <i class="fa fa-repeat repeat" unicorn:click="retry"></i>
+            {% endif %}
         </td>
     </tr>
 </div>
