--- a/webscraping/templates/unicorn/webscrape/webscrape.html
+++ b/webscraping/templates/unicorn/webscrape/webscrape.html
@@ -250,6 +250,18 @@
                 font-size: 1.2em;
                 letter-spacing: .1em;
             }
+            .website-data-form label {
+                font-size: 1.3em;
+                font-weight: normal;
+                color: #454545;
+            }
+            .website-data-form input[type="checkbox"] {
+                width: 1.8em;
+                height: 1.3em;
+            }
+            .website-data-form select option+option {
+                text-transform: uppercase;
+            }
 
             .tab-selector {
                 background: none;
@@ -331,9 +343,10 @@
                 progressBars.forEach(function(progressBar) {
                     const task_run_id = progressBar.id;
 
+                    console.log(`progressBars.forEach(... task_run_id: ${task_run_id} ...)`);
+
                     Unicorn.call('webscrape.webscrape', 'task_is_running', task_run_id);
                     const task_is_running = Unicorn.getReturnValue('webscrape.webscrape');
-                    console.log(1111111111);
 
                     if(!(task_run_id in tasksProgress)){
                         tasksProgress[task_run_id] = { 'has_succeeded': false };
@@ -341,7 +354,6 @@
 
                     if(task_is_running && !tasksProgress[task_run_id]['has_succeeded']){
 
-                        console.log(22222222222);
                         Unicorn.call('webscrape.webscrape', 
                             'get_task_progress_data', task_run_id);
 
@@ -350,7 +362,6 @@
                         const task_progress_value = task_progress_data.task_progress_value;
 
                         if(task_progress_data && task_progress_value) {
-                            console.log(333333333333);
                             console.log(`task_progress - ${task_run_id} : ${task_progress_value}`);
 
                             progressBar.style.width = `${task_progress_value}%`;
@@ -358,7 +369,6 @@
                             // Optionally, update progress text
                             const progressText = document.getElementById(`progressText-${task_run_id}`);
                             if (progressText) {
-                                console.log(4444444444);
                                 progressText.textContent = `${task_progress_value}%`;
                             }
 
@@ -382,6 +392,7 @@
                         field.value = formFielValues[field.id];
                     });
                 }
+
             }
             setInterval(updateTasks, 1000*20);
 
