Split Webscrapes into tables by status, minor fixes, testing running process... | Ok - Committing before refactoring from analysis, see <webscraper-process-schema>... | On branch <62610723-webscraper-process-schema-architecture-implementation>, refactoring done - to be reviewed, tested and validated, pushing... | Syntax errors fixed, re-pushing... | Runtime errors fixed, re-pushing... next: Operational errors... | Operational errors fixed, migration done... next: Testing... | Local tests & fixes completed, system running smoothly. Next: truthfinder tests... | /OFFLINE - Added arrow navigation to tables tabs... /

--- a/webscraping/templates/unicorn/webscrape/manage_custom.html
+++ b/webscraping/templates/unicorn/webscrape/manage_custom.html
@@ -185,9 +185,9 @@
     <span class="block">&nbsp;</span>
 
 
-    <div class="flex sm:block sm:mt-5 sm:mb-10 items-center">
+    <div class="flex sm:block sm:mt-5 sm:mb-10 items-center form-button-container">
         <button unicorn:click="scrape" data-form="manageCustomForm" data-formclass="manage-custom-form"
-            class="btn btn-outline-tertiary rounded bg-green-600 hover:bg-green-500 p-4 py-1 text-3xl text-white font-bold shadow-xl duration-1000 test submit">Test</button>
+            class="test submit">Test</button>
     </div>
 </div>
 
