--- a/webscraping/templates/unicorn/webscrape/manage_people.html
+++ b/webscraping/templates/unicorn/webscrape/manage_people.html
@@ -57,26 +57,10 @@
 
         <span class="block">&nbsp;</span>
 
-        <div class="flex sm:block sm:mt-5 sm:mb-10 items-center">
+        <div class="flex sm:block sm:mt-5 sm:mb-10 items-center form-button-container">
             <button unicorn:click="scrape" data-form="managePeopleForm" data-formclass="manage-people-form"
-                class="btn btn-outline-tertiary rounded bg-green-500 p-4 py-1 text-3xl text-white font-bold shadow-xl duration-1000 search submit">Search</button>
+                class="search submit">Search</button>
         </div>
-
-        <style>
-            button.search {
-                /*
-                margin: auto !important;
-                display: block;
-                */
-                font-size: 1.6rem;
-            }
-            button.search:before,
-            button.search:after {
-                content: "__";
-                margin-top: -1em;
-            }
-
-        </style>
     </div>
 </div>
 
