--- a/webscraping/templates/unicorn/webscrape/manage.html
+++ b/webscraping/templates/unicorn/webscrape/manage.html
@@ -177,8 +177,6 @@
     <span class="block">&nbsp;</span>
 
     <div data-website_url="truthfinder.com" class="website-data-form hidden">
-        <span class="block">&nbsp;</span>
-
         <input unicorn:model.defer="firstName"      type="text"   id="firstName"   placeholder="First name"    value="{{webscrape.firstName}}"
         class="form-control rounded border-green-700 shadow-lg text-green-900 tracking-wider" />
         <input unicorn:model.defer="lastName"      type="text"   id="lastName"   placeholder="Last name"    value="{{webscrape.lastName}}"
@@ -220,9 +218,9 @@
 
         <span class="block">&nbsp;</span>
 
-        <div class="flex sm:block sm:mt-5 sm:mb-10 items-center">
+        <div class="flex sm:block sm:mt-5 sm:mb-10 items-center form-button-container">
             <button unicorn:click="scrape" data-form="manageForm"
-                class="btn btn-outline-tertiary rounded bg-green-600 hover:bg-green-500 p-4 py-1 text-3xl text-white font-bold shadow-xl duration-1000 search submit">Search</button>
+                class="search submit">Search</button>
         </div>
 
     </div>
@@ -260,9 +258,9 @@
 
         <span class="block">&nbsp;</span>
 
-        <div class="flex sm:block sm:mt-5 sm:mb-10 items-center">
+        <div class="flex sm:block sm:mt-5 sm:mb-10 items-center form-button-container">
             <button unicorn:click="scrape" data-form="manageForm" data-formclass="manage-form"
-                class="btn btn-outline-tertiary rounded bg-green-600 hover:bg-green-500 p-4 py-1 text-3xl text-white font-bold shadow-xl duration-1000 search submit">Search</button>
+                class="search submit">Search</button>
         </div>
 
     </div>
