Split Webscrapes into tables by status, minor fixes, testing running process... | Ok - Committing before refactoring from analysis, see <webscraper-process-schema>... | On branch <62610723-webscraper-process-schema-architecture-implementation>, refactoring done - to be reviewed, tested and validated, pushing... | Syntax errors fixed, re-pushing... | Runtime errors fixed, re-pushing... next: Operational errors... | Operational errors fixed, migration done... next: Testing... | Local tests & fixes completed, system running smoothly. Next: truthfinder tests... | /OFFLINE - Added arrow navigation to tables tabs... / | /ONLINE - truthfinder tests OK - not completing: connection... / | Added default_image...

--- a/webscraping/templates/unicorn/webscrape/row.html
+++ b/webscraping/templates/unicorn/webscrape/row.html
@@ -243,8 +243,8 @@ n btn-outline-success rounded bg-green-600 hover:bg-green-400 p-1 px-4
         <td id="retry-{{webscrape.id}}"
             class="first:rounded-l-lg last:rounded-r-lg p-2
                    text-green-900 tracking-widest border-green-100">
-            {% if task_is_queueable %}
-                <i class="fa fa-repeat repeat" unicorn:click="retry"></i>
+            {% if task_is_queueable or webscrape.task_status == "FAILED" and task_maxed_attempts %}
+                <i class="fa fa-repeat repeat" onclick="retry('{{webscrape.id}}')" title="Click to re-run task..."></i>
             {% endif %}
         </td>
     </tr>
