Split Webscrapes into tables by status, minor fixes, testing running process... | Ok - Committing before refactoring from analysis, see <webscraper-process-schema>... | On branch <62610723-webscraper-process-schema-architecture-implementation>, refactoring done - to be reviewed, tested and validated, pushing... | Syntax errors fixed, re-pushing... | Runtime errors fixed, re-pushing... next: Operational errors... | Operational errors fixed, migration done... next: Testing... | Local tests & fixes completed, system running smoothly. Next: truthfinder tests... | /OFFLINE - Added arrow navigation to tables tabs... / | /ONLINE - truthfinder tests OK - not completing: connection... / | Added default_image... | -- MINIFIED -- | Back to unminied main... | Fixed LIVE vs LOCAL js/unpkg.com/.../.../cdn.min.js unicorn scripts fetch...

--- a/webscraping/templates/webscraping/_base_webscrape.html
+++ b/webscraping/templates/webscraping/_base_webscrape.html
@@ -28,13 +28,19 @@
         <link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">
 
 
+        <!-- Django Unicorn -->
         {% load unicorn %}
-        <!-- script defer src="https://unpkg.com/@alpinejs/morph@3.x.x/dist/cdn.min.js"></script -->
-        <!-- script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script -->
-        <script defer src="{% static 'js/unpkg.com/@alpinejs/morph@3.x.x/dist/cdn.min.js' %}"></script>
-        <script defer src="{% static 'js/unpkg.com/alpinejs@3.x.x/dist/cdn.min.js' %}"></script>
+        {% if request.IS_LIVE %}
+            <script defer src="https://unpkg.com/@alpinejs/morph@3.x.x/dist/cdn.min.js"></script>
+            <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+        {% else %}
+            <script defer src="{% static 'js/unpkg.com/@alpinejs/morph@3.x.x/dist/cdn.min.js' %}"></script>
+            <script defer src="{% static 'js/unpkg.com/alpinejs@3.x.x/dist/cdn.min.js' %}"></script>
+        {% endif %}
         {% unicorn_scripts %}
 
+
+        <!-- Template: main.js -->
         <script type="text/javascript" src="{% static 'templates/main/js/main.js' %}"></script>
     </head>
 
