Split Webscrapes into tables by status, minor fixes, testing running process... | Ok - Committing before refactoring from analysis, see <webscraper-process-schema>... | On branch <62610723-webscraper-process-schema-architecture-implementation>, refactoring done - to be reviewed, tested and validated, pushing... | Syntax errors fixed, re-pushing... | Runtime errors fixed, re-pushing... next: Operational errors... | Operational errors fixed, migration done... next: Testing... | Local tests & fixes completed, system running smoothly. Next: truthfinder tests... | /OFFLINE - Added arrow navigation to tables tabs... / | /ONLINE - truthfinder tests OK - not completing: connection... / | Added default_image... | -- MINIFIED -- | Back to unminied main... | Fixed LIVE vs LOCAL js/unpkg.com/.../.../cdn.min.js unicorn scripts fetch...  | Added <app.models.GeneralConfig> and <GeneralConfig.objects.first().json_data> ...

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -3,11 +3,14 @@
 {% block content %}
 
         <div style="margin: 5em auto 5em 10em; padding: 5em; color: green; border: 1px solid green; text-align: center; font-size: 1.5em;">
-            <a href="{% url 'webscrape' %}" id="webscrape">WEBSCRAPING</a>
-            <br/><a href="{% url 'webscrape_data' %}" id="webscrape-data">data</a>
+            <a href="{% url 'webscrape' %}" id="webscrape" style="color: green;">WEBSCRAPING</a>
+            <br/><a href="{% url 'webscrape_data' %}" id="webscrape-data" style="color: green;">data</a>
         </div>
 
         <style>
+            a {
+                color: green;
+            }
             a#webscrape-data {
                 font-size: .5em;
             }
