Split Webscrapes into tables by status, minor fixes, testing running process... | Ok - Committing before refactoring from analysis, see <webscraper-process-schema>... | On branch <62610723-webscraper-process-schema-architecture-implementation>, refactoring done - to be reviewed, tested and validated, pushing... | Syntax errors fixed, re-pushing... | Runtime errors fixed, re-pushing... next: Operational errors... | Operational errors fixed, migration done... next: Testing... | Local tests & fixes completed, system running smoothly. Next: truthfinder tests... | /OFFLINE - Added arrow navigation to tables tabs... / | /ONLINE - truthfinder tests OK - not completing: connection... / | Added default_image... | -- MINIFIED -- | Back to unminied main... | Fixed LIVE vs LOCAL js/unpkg.com/.../.../cdn.min.js unicorn scripts fetch...  | Added <app.models.GeneralConfig> and <GeneralConfig.objects.first().json_data> ... | Adjusted scripts folder choice, and added online remote server folder choice... → Deploying on live server... | THIS SHOULD BE THE RIGHT BRANCH THAT IS TO BE MERGED WITH MAIN... pushing... | OK, MERGED → Pushing, deploying... | SUCCESSFULLY Deployed on remote server <link:http://87.106.66.163/webscraping/webscrape>, see production server and [Journal](https://docs.google.com/spreadsheets/d/1AU9WvPnJFh_BF7Q-jxhW8XUUhw5fVGEPDa8ENuccYeA/edit?gid=1945329688#gid=1945329688) for details... - NEXT: Installing scripts and testing... | Only firefox webdriver corrections for tests to work...  | Firefox webdriver corrections OK - Scrapes running, switched to postgres for performance, COMMITING TO DELETE sqlite DB AND FREE SPACE... | <db/db.sqlite3> deleted, added message reminder/prompt for running openvpn...

--- a/webscraping/templates/unicorn/webscrape/table.html
+++ b/webscraping/templates/unicorn/webscrape/table.html
@@ -5,6 +5,17 @@
 
 <div unicorn:view id="webscrapes-table">
 
+    <div id="webscrapes-message-prompt" class="hide-smoothly">
+        <span id="message-prompt">
+            <i id="message-icon" class="fa fa-question hide"></i>
+
+            <span id="message-prompt-message">
+                Is (open)vpn started ? 
+                 <i onclick="messagePromptHide()" class="fa fa-ok ok cursor-pointer link-button function-call">Yes</i>                
+            </span>
+        </span>
+    </div>
+
     <div id="webscrapes-table-selectors">
         {% for status in statuses %}
 
@@ -149,6 +160,10 @@
             reloadTableOnce();
         }
 
+
+        function messagePromptHide(){
+            document.querySelector(`#webscrapes-message-prompt`).classList.add("hidden");
+        }
 
 
         const defaultWebscrapeStatus = "{{default_webscrape_status}}";
